<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_material">


    <TextView
        android:id="@+id/att_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/checkin_button"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/checked_in"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold" />

    <ImageButton
        android:id="@+id/checkin_button"
        style="@android:style/Widget.Material.Light.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_centerInParent="true"
        android:background="@drawable/trans_box"
        android:contentDescription="@string/checkin_b"
        android:scaleType="fitCenter" />


    <TextView
        android:id="@+id/resultTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/large_text"
        android:textColor="@color/white"
        android:textSize="20sp" />


</RelativeLayout>

